--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,5 @@
 header#main-header {
     width: 100%;
-    height: 60px;
     position: fixed;
     left: 0;
     top: 0;
@@ -11,8 +10,12 @@ header#main-header {
     display: flex;
     justify-content: center;
     align-items: center;
-    word-spacing: 155px;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+
 }
 header#main-header a{
     margin: 30px;
+    flex: 1;
 }
