--- a/src/components/layout/Card.css
+++ b/src/components/layout/Card.css
@@ -3,10 +3,10 @@
     overflow: hidden;
     border: 3px solid ;
     margin: 10px;
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
     min-width: 500px;
-    max-width: 500px;
+    
 }
 
 .Card .Title {
