--- a/src/pages/Client/Deletar/index.css
+++ b/src/pages/Client/Deletar/index.css
@@ -6,14 +6,15 @@
     margin-top: 5px;
     margin-bottom: 20px;
     font-size: 16px;
-    color: dimgray;
+    color: rgb(255, 255, 255);
 }
  
 .client-delete label{
     font-size: 20px;
-    color: black;
+    color: rgb(255, 255, 255);
     font-weight: bold;
 }
 .client-delete {
     margin-top: 20px;
+    color: white;
 }
