--- a/src/components/layout/Card.css
+++ b/src/components/layout/Card.css
@@ -3,9 +3,10 @@
     overflow: hidden;
     border: 3px solid ;
     margin: 10px;
-    display: inline-flex;
+    display: flex;
     flex-direction: column;
-    min-width: 500px;
+    min-width: fit-content;
+    height: fit-content;
     
 }
 
