--- a/src/App.css
+++ b/src/App.css
@@ -5,5 +5,6 @@
     margin: 60px;
 }
 body{
-    background-color: #0f0f0f;
+    background-color: #1a1a1a;
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS7KcyZsiNZTYPlOO26R3dZVXrPwrXux5m4SA&usqp=CAU);
 }
