--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,6 @@
     margin: 60px;
 }
 body{
-    background-color: #1a1a1a;
-    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS7KcyZsiNZTYPlOO26R3dZVXrPwrXux5m4SA&usqp=CAU);
+    background: rgb(20,20,20);
+    background: radial-gradient(circle, rgba(20,20,20,1) 0%, rgba(45,45,45,1) 36%, rgba(0,0,0,1) 65%, rgba(0,0,0,1) 100%) fixed;;
 }
