updating some stuff

--- a/src/components/layout/Card.css
+++ b/src/components/layout/Card.css
@@ -16,11 +16,13 @@
     display: flex;
     justify-content: center;
     font-family: 'Lobster';
-    color: white;
+    color: white ;
+    font-family: 'Big Shoulders Stencil Text';
 }
 
 .Card .Content {
     flex: 1;
+    font-family: 'Turret Road';
     background-color: #ffffff;
     color: #000000;
     padding: 20px;
