--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -13,6 +13,7 @@ header#main-header {
     flex-direction: column;
     justify-content: center;
     flex-wrap: wrap;
+    font-family: 'Syne Mono';
 
 }
 header#main-header a{
